--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,3 +1,4 @@
+<h1>Greg's Categories</h1>
 {{#each model as |category|}}
-  <p>{{category.name}}</p>
+  <p>{{#link-to 'category' category.id}}{{category.name}}{{/link-to}}</p>
 {{/each}}
