add delete listing component.

--- a/app/templates/components/listing-edit.hbs
+++ b/app/templates/components/listing-edit.hbs
@@ -26,4 +26,5 @@
   </form>
 {{else}}
   <button class="btn" {{action 'showListingEdit'}}>Edit Listing</button>
+  <button class="btn" {{action 'deleteListing' listing}}>Delete Listing</button>
 {{/if}}
