--- a/app/templates/listing.hbs
+++ b/app/templates/listing.hbs
@@ -7,4 +7,4 @@
 
 <hr>
 
-{{listing-edit listing=model updateListing="updateListing"}}
+{{listing-edit listing=model updateListing="updateListing" deleteListing="deleteListing"}}
