--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,4 +1,4 @@
 <h1>Greg's Categories</h1>
 {{#each model as |category|}}
-  <p>{{#link-to 'category' category.id}}{{category.name}}{{/link-to}}</p>
+  <p>{{#link-to 'category' category.id}}{{category.name}}{{/link-to}} {{category-popularity category}}</p>
 {{/each}}
